# solar-panel-fault-detection-platform

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  run_api.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20240115_000000_001_initial_schema.py
config/: default.yaml
monitoring/: alert_rules.yml  grafana_dashboard.json  prometheus.yml
scripts/: __init__.py  prepare_data.py  serve.py  train_sparknet.py  train_unet.py
src/: __init__.py  config.py
src/api/: __init__.py  app.py  database.py  schemas.py
src/api/routers/: __init__.py  inference.py  panels.py
src/data/: __init__.py  dataloader.py  datasets.py  transforms.py
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
src/frontend/src/: App.tsx  index.css
src/frontend/src/api/: client.ts
src/frontend/src/components/: Layout.tsx  PanelCard.tsx  RiskBadge.tsx  SeverityChart.tsx
src/frontend/src/pages/: Dashboard.tsx  Inference.tsx  PanelDetail.tsx
src/frontend/src/types/: index.ts
src/inference/: __init__.py  gradcam.py  pipeline.py  severity.py
src/models/: __init__.py  ablation_classifiers.py  sparknet.py  unet.py
src/training/: __init__.py  callbacks.py  metrics.py  trainer.py
tests/: __init__.py  conftest.py
tests/unit/: test_ablation.py  test_api.py  test_datasets.py  test_models.py  test_severity.py  test_sparknet.py  test_unet.py
